force-app/main/default/objects/EMS_TM_Timesheet_Record__c/EMS_TM_Timesheet_Record__c.object-meta.xml
<CustomObject>
    <label>Timesheet Line Items</label>
    <nameField>
        <displayFormat>TLI{00000000}</displayFormat>
        <label>Timesheet Record</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Timesheet Records</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>