force-app/main/default/objects/EMS_TM_Timesheet_Record__c/fields/ApprovedandSubmitted__c.field-meta.xml
<CustomField>
    <fullName>ApprovedandSubmitted__c</fullName>
    <formula>OR(ISPICKVAL(Status__c,&apos;Submitted&apos;),ISPICKVAL(Status__c,&apos;Approved&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ApprovedandSubmitted</label>
    <type>Checkbox</type>
</CustomField>