force-app/main/default/objects/EMS_TM_Timesheet_Record__c/fields/ApproverLastName__c.field-meta.xml
<CustomField>
    <fullName>ApproverLastName__c</fullName>
    <description>This field is used for storing the Timesheet line item approvers Name</description>
    <label>Approver Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>