force-app/main/default/objects/EMS_TM_Timesheet_Record__c/fields/Assignedtask__c.field-meta.xml
<CustomField>
    <fullName>Assignedtask__c</fullName>
    <label>Assignedtask</label>
    <length>20</length>
    <type>Text</type>
</CustomField>