force-app/main/default/objects/EMS_TM_Timesheet_Record__c/fields/Assignment__c.field-meta.xml
<CustomField>
    <fullName>Assignment__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Assignment</label>
    <referenceTo>EMS_TM_Assignment__c</referenceTo>
    <relationshipName>Timesheets1</relationshipName>
    <type>Lookup</type>
</CustomField>