force-app/main/default/objects/EMS_TM_Timesheet_Record__c/fields/EMS_Timesheet__c.field-meta.xml
<CustomField>
    <fullName>EMS_Timesheet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EMS_Timesheet</label>
    <referenceTo>EMS_Timesheet__c</referenceTo>
    <relationshipName>Employee_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>