force-app/main/default/objects/EMS_TM_Timesheet_Record__c/fields/EMS_TM_Mon__c.field-meta.xml
<CustomField>
    <fullName>EMS_TM_Mon__c</fullName>
    <label>Mon</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>