force-app/main/default/objects/EMS_TM_Timesheet_Record__c/fields/EMS_TM_OtherTask__c.field-meta.xml
<CustomField>
    <fullName>EMS_TM_OtherTask__c</fullName>
    <label>EMS_TM_OtherTask</label>
    <length>225</length>
    <type>Text</type>
</CustomField>