force-app/main/default/objects/EMS_TM_Timesheet_Record__c/fields/EMS_TM_Project__c.field-meta.xml
<CustomField>
    <fullName>EMS_TM_Project__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Project</label>
    <referenceTo>EMS_TM_Project__c</referenceTo>
    <relationshipLabel>Timesheet Records</relationshipLabel>
    <relationshipName>Timecard_Splits</relationshipName>
    <type>Lookup</type>
</CustomField>