force-app/main/default/objects/EMS_TM_Timesheet_Record__c/fields/EMS_TM_Remarks__c.field-meta.xml
<CustomField>
    <fullName>EMS_TM_Remarks__c</fullName>
    <label>Remarks</label>
    <length>225</length>
    <type>Text</type>
</CustomField>