force-app/main/default/objects/EMS_TM_Timesheet_Record__c/fields/Number_of_Hours__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Hours__c</fullName>
    <formula>EMS_TM_Fri__c + EMS_TM_Mon__c + EMS_TM_Sat__c + EMS_TM_Sun__c + EMS_TM_Thu__c  + EMS_TM_Tue__c + EMS_TM_Wed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>