force-app/main/default/objects/EMS_TM_Timesheet_Record__c/fields/Project_Manager_Name__c.field-meta.xml
<CustomField>
    <fullName>Project_Manager_Name__c</fullName>
    <formula>EMS_TM_Project__r.Project_Manager__r.FirstName +&apos; &apos;+ EMS_TM_Project__r.Project_Manager__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Manager Name</label>
    <type>Text</type>
</CustomField>