force-app/main/default/objects/EMS_TM_Timesheet_Record__c/fields/Project_Task__c.field-meta.xml
<CustomField>
    <fullName>Project_Task__c</fullName>
    <label>Project Task</label>
    <length>225</length>
    <type>Text</type>
</CustomField>