force-app/main/default/objects/EMS_TM_Timesheet_Record__c/fields/Timesheet_Approver__c.field-meta.xml
<CustomField>
    <fullName>Timesheet_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Timesheet Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Timesheet_Records</relationshipName>
    <type>Lookup</type>
</CustomField>