force-app/main/default/objects/EMS_TM_Timesheet_Record__c/fields/Timesheet_Weekdate__c.field-meta.xml
<CustomField>
    <fullName>Timesheet_Weekdate__c</fullName>
    <formula>EMS_Timesheet__r.Week_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Timesheet Weekdate</label>
    <type>Date</type>
</CustomField>