force-app/main/default/objects/EMS_TM_Timesheet_Record__c/fields/WFO_Days__c.field-meta.xml
<CustomField>
    <fullName>WFO_Days__c</fullName>
    <formula>IF( EMS_Timesheet__r.WFH_Mon__c, 1, 0) +
IF(EMS_Timesheet__r.WFH_Tue__c, 1, 0) +
IF(EMS_Timesheet__r.WFH_Wed__c, 1, 0) +
IF(EMS_Timesheet__r.WFH_Tue__c, 1, 0) +
IF(EMS_Timesheet__r.WFH_Fri__c, 1, 0) +
IF(EMS_Timesheet__r.WFH_Sat__c, 1, 0) +
IF(EMS_Timesheet__r.WFH_Sun__c, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>WFO Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>