force-app/main/default/objects/EMS_TM_Timesheet_Record__c/validationRules/Timesheet_record_creation_check.validationRule-meta.xml
<ValidationRule>
    <fullName>Timesheet_record_creation_check</fullName>
    <active>true</active>
    <errorConditionFormula>EMS_Timesheet__r.User__r.Contact.Timesheet_NoNeed__c =true</errorConditionFormula>
    <errorMessage>You don&apos;t  have access to create a timesheet</errorMessage>
</ValidationRule>