force-app/main/default/objects/EMS_TM_Timesheet_Record__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>EMS_TM_Project__c</columns>
    <columns>EMS_TM_Mon__c</columns>
    <columns>EMS_TM_Tue__c</columns>
    <columns>EMS_TM_Wed__c</columns>
    <columns>EMS_TM_Thu__c</columns>
    <columns>EMS_TM_Fri__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>EMS_TM_ProjectTask__c</columns>
    <columns>User__c</columns>
    <columns>EMS_TM_Remarks__c</columns>
    <columns>EMS_TM_OtherTask__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>