force-app/main/default/objects/EMS_TM_Timesheet_Record__c/listViews/Pending_Timesheets.listView-meta.xml
<ListView>
    <fullName>Pending_Timesheets</fullName>
    <columns>EMS_Timesheet__c</columns>
    <columns>EMS_TM_Sun__c</columns>
    <columns>EMS_TM_Mon__c</columns>
    <columns>EMS_TM_Tue__c</columns>
    <columns>EMS_TM_Wed__c</columns>
    <columns>EMS_TM_Thu__c</columns>
    <columns>EMS_TM_Fri__c</columns>
    <columns>EMS_TM_Sat__c</columns>
    <columns>EMS_TM_Project__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>Pending Timesheets</label>
</ListView>